force-app/main/default/objects/PostDeployment__c/PostDeployment__c.object-meta.xml
<CustomObject>
    <description>DevOps Center Testing Object</description>
    <label>PostDeployment</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>PostDeployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PostDeployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>