force-app/main/default/objects/PostDeployment__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PostDeployments</relationshipName>
    <type>Lookup</type>
</CustomField>