force-app/main/default/objects/PostDeployment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
                <default>true</default>
                <label>CRM</label>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>CRM+Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>