force-app/main/default/objects/PostDeployment__c/fields/Step_Details__c.field-meta.xml
<CustomField>
    <fullName>Step_Details__c</fullName>
    <label>Step Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>